[tool.poetry]
name = "ensenas-core"
version = "0.1.0"
description = ""
authors = ["Alejo Lovallo <alejoe.lovallo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.0.4"
djangorestframework="3.15.1"
django-cors-headers="4.3.1"
black="23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
