[tool.poetry]
name = "ensenas-core"
version = "0.1.0"
description = ""
authors = ["Alejo Lovallo <alejoe.lovallo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "3.0.3"
SQLAlchemy = "2.0.30"


[tool.poetry.group.dev.dependencies]
black="23.11.0"
pre-commit="3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
